Обновление по ТЗ 5 спринта, написание тестов в процессе Work 06.05.2025